--- a/app/templates/components/day-forecast-small.hbs
+++ b/app/templates/components/day-forecast-small.hbs
@@ -1,11 +1,11 @@
-<div class="ui card">
+<div class="ui card small">
     <div class="content">
         <div class="header">{{dayWeek}}</div>
         <div class="meta">
             <a>{{dateForShow}}</a>
         </div>        
         <div class="image">
-            <img src={{weatherImage}} height="70">
+            <img src={{weatherImage}} height="30">
         </div>
         <div class="temperature">
             {{model.temperature}}°
