--- a/app/templates/month.hbs
+++ b/app/templates/month.hbs
@@ -1,5 +1,5 @@
 <div class="ui link cards">
     {{#each model as | day |}}
-        {{day-forecast model=day}}
+        {{day-forecast-small model=day}}
     {{/each}}
 </div>
